--- a/app/src/main/res/layout/mylist.xml
+++ b/app/src/main/res/layout/mylist.xml
@@ -24,7 +24,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:text="第一行文字"
-            android:textColor="#00FF00"
+            android:textColor="#2b2b2b"
             android:textSize="20dp" />
 
         <TextView
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="第二行文字"
-            android:textColor="#00FF00"
+            android:textColor="#7b00ff"
             android:textSize="16dp" />
     </LinearLayout>
 
